// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getScreenDimensions should get the needed screen dimensions 1`] = `
Object {
  "dimensions": Object {
    "body": Object {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": Object {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": Object {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isLandscape": true,
      "outerHeight": 768,
      "outerWidth": 1024,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
}
`;

exports[`getScreenDimensions should get the needed screen dimensions if the outerHeight and outerWidth are set to 0 1`] = `
Object {
  "dimensions": Object {
    "body": Object {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": Object {
      "clientHeight": 1234,
      "clientWidth": 4321,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": Object {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isLandscape": false,
      "outerHeight": 1234,
      "outerWidth": 4321,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
}
`;

exports[`getScreenDimensions should return zeroed dimensions if the document attributes are null 1`] = `
Object {
  "dimensions": Object {
    "body": Object {
      "offsetHeight": 0,
      "scrollHeight": 0,
    },
    "html": Object {
      "clientHeight": 0,
      "clientWidth": 0,
      "offsetHeight": 0,
      "scrollHeight": 0,
      "scrollWidth": 0,
    },
    "window": Object {
      "devicePixelRatio": 1,
      "innerHeight": 768,
      "innerWidth": 1024,
      "isLandscape": false,
      "outerHeight": 0,
      "outerWidth": 0,
      "screenHeight": 0,
      "screenWidth": 0,
    },
  },
}
`;
